redesignedoj/files_usersubmissions/2/submission.txt
2_PROB7_code.cpp: In function ‘int main()’:
2_PROB7_code.cpp:5:10: error: expected identifier before numeric constant
    5 |   return 0;
      |          ^
2_PROB7_code.cpp:5:3: error: named return values are no longer supported
    5 |   return 0;
      |   ^~~~~~
2_PROB7_code.cpp:6:2: error: expected ‘{’ at end of input
    6 | }
      |  ^
